--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "vite-plugin-live-reload": "^3.0.0"
   },
   "dependencies": {
+    "@element-plus/icons-vue": "^2.1.0",
     "axios": "^1.4.0",
     "element-plus": "^2.3.6",
     "vue-router": "^4.0.13"
