--- a/composer.json
+++ b/composer.json
@@ -4,7 +4,7 @@
     "license": "GPLv2",
     "autoload": {
         "psr-4": {
-            "FluentClockin\\": "includes/"
+            "FluentEmbed\\": "includes/"
         }
     },
     "authors": [
